<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SmartClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">智能客控系统</string>
    <string name="main_top_title_name">智能客控系统</string>
    <string name="main_left_room">房间</string>
    <string name="main_left_control">" 灯光"</string>
    <string name="main_left_serve">"  信息服务"</string>
    <string name="main_left_music">"  窗帘"</string>
    <string name="main_left_air">"  空调"</string>
    <string name="main_left_about">"  网络设置"</string>
    <string name="quit">"  退出程序"</string>
<!--     <string name="control_porch_light">廊灯</string>  -->
    <string name="control_porch_light">走廊射灯</string>
<!--     <string name="control_desk_lamp">台灯</string> -->
	<string name="control_desk_lamp">走廊灯带</string>
<!--     <string name="control_floor_lamp">落地灯</string> -->
	<string name="control_floor_lamp">壁    灯</string>
<!--     <string name="control_hall_light">厅灯</string> -->
	<string name="control_hall_light">射    灯</string>
<!--     <string name="control_reading_left">左阅读灯</string> -->
    <string name="control_reading_left">厅主灯</string>
<!--      <string name="control_reading_right">右阅读灯</string> -->
	<string name="control_reading_right">窗户射灯</string>
    <string name="control_bed_left">左床头灯</string>
    <string name="control_bed_right">右床头灯</string>
    <string name="control_on">总开</string>
    <string name="control_off">总关</string>
    <string name="control_scene_one">场景 1</string>
    <string name="control_scene_two">场景 2</string>
    <string name="control_scene_three">场景 3</string>
    <string name="control_scene_four">场景 4</string>
    <string name="control_scene_five">场景 5</string>
    <string name="control_scene_six">场景 6</string>
    <string name="control_scene_seven">场景 7</string>
    <string name="control_scene_eight">场景 8</string>
    <string name="pop_ok">确定</string>
    <string name="pop_cancel">取消</string>
    <string name="service_room">客房服务</string>
    <string name="service_make_up">请打扫</string>
    <string name="service_do_not_disturb">请忽打扰</string>
    <string name="service_weather_info">气息信息</string>
    <string name="service_out_door">室外气温:</string>
    <string name="service_in_door">室内气温:</string>
    <string name="service_weather">天气状况：</string>
    <string name="service_wind_speed">室外风速：</string>
    <string name="music_drapes_curtain">卧室布帘</string>
    <string name="music_day_curtain">卧室纱帘</string>
    <string name="music_night_curtain">卧室遮光帘</string>
    <string name="music_bathroom_curtain">浴室窗帘</string>
    <string name="music_bathroom_music">浴室音乐</string>
    <string name="music_current_channel">当前状态:</string>
    <string name="music_next">下一频道</string>
    <string name="music_pre">上一频道</string>
    <string name="music_chanel_one">频道一</string>
    <string name="music_chanel_two">频道二</string>
    <string name="music_chanel_three">频道三</string>
    <string name="music_chanel_four">频道四</string>
    <string name="music_sound">声音</string>
    <string name="air_control">空调:</string>
    <string name="air_wind_speed">风 速:</string>
    <string name="air_auto">自动</string>
    <string name="air_in_door">室内温度:</string>
    <string name="air_out_door">室外温度:</string>
    <string name="air_setting">设置温度:</string>
    <string name="air_mode">季节模式:</string>
    <string name="air_weather_units">℃</string>
    <string name="air_timing">定时关:</string>
    <string name="air_hour_units">小时</string>
    <string name="air_btn_on_off">"    开/关"</string>
    <string name="air_btn_wind_speed">风速</string>
    <string name="air_btn_mode">模式</string>
    <string name="air_btn_temperature_add">温度</string>
    <string name="air_btn_temperature_minus">温度</string>
    <string name="init_hint">IP:</string>
    <string name="sure">保存</string>
    <string name="init_hint_house">端口:</string>
    <string name="name_7">哈谈窗户射灯</string>
    <string name="name_8">哈谈室射灯</string>
    <string name="name_9">哈谈室灯带</string>
    <string name="name_10">卧室休息射灯</string>
    <string name="name_11">卧室休息灯带</string>
    <string name="name_12">床头休息射灯</string>
    <string name="name_13">床头休息灯带</string>
    <string name="name_14">休息射灯(右)</string>
    <string name="name_15">休息灯带 (右)</string>
    <string name="name_16">卫生间灯</string>
    <string name="name_17">卫生间镜壁灯</string>
    <string name="name_18">卫生间镜灯带</string>
    <string name="name_19">卫生间总控</string>
    
    <string name="input_password">请输入密码:</string>
    <string name="ok">确定</string>
    
    <string name="btn_close">关闭</string>
    
    <string name="jingjihujiao">紧急呼叫</string>
    <string name="qingshaohou">请稍后</string>
    <string name="qingqiutuifang">请求退房</string>
    <string name="qingqiufuwu">请求服务</string>
</resources>
