<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titel_bg" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="5.0dip"
            android:paddingTop="5.0dip"
            android:textSize="@dimen/btn_text_size"
            android:text="@string/main_top_title_name"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3.0"
            android:orientation="vertical" >

<!--             <TextView -->
<!--                 android:id="@+id/btn_room" -->
<!--                 android:layout_width="fill_parent" -->
<!--                 android:layout_height="fill_parent" -->
<!--                 android:layout_weight="1.0" -->
<!--                 android:background="@drawable/left_room" -->
<!--                 android:gravity="center_vertical" -->
<!--                 android:paddingLeft="10.0dip" -->
<!--                 android:text="@string/main_left_room" -->
<!--                 android:textColor="@android:color/black" /> -->

            <TextView
                android:id="@+id/btn_control"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/left_btn_n"
                android:drawableLeft="@drawable/left_control"
                android:gravity="center_vertical"
                android:paddingLeft="5.0dip"
                android:paddingRight="5.0dip"
                android:textSize="@dimen/btn_text_size"
                android:text="@string/main_left_control"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/btn_serve"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/left_btn_d"
                android:drawableLeft="@drawable/left_service"
                android:gravity="center_vertical"
                android:paddingLeft="5.0dip"
                android:paddingRight="5.0dip"
                android:textSize="@dimen/btn_text_size"
                android:text="@string/main_left_serve"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/btn_music"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/left_btn_d"
                android:drawableLeft="@drawable/left_music"
                android:gravity="center_vertical"
                android:paddingLeft="5.0dip"
                android:paddingRight="5.0dip"
                android:textSize="@dimen/btn_text_size"
                android:text="@string/main_left_music"
                android:textColor="@android:color/white"
                android:visibility="visible" />

            <TextView
                android:id="@+id/btn_air"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/left_btn_d"
                android:drawableLeft="@drawable/left_air"
                android:gravity="center_vertical"
                android:paddingLeft="5.0dip"
                android:paddingRight="5.0dip"
                android:textSize="@dimen/btn_text_size"
                android:text="@string/main_left_air"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/btn_about"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/left_btn_d"
                android:drawableLeft="@drawable/left_info"
                android:gravity="center_vertical"
                android:paddingLeft="5.0dip"
                android:paddingRight="5.0dip"
                android:textSize="@dimen/btn_text_size"
                android:text="@string/main_left_about"
                android:textColor="@android:color/white" />
            
            <TextView
                android:id="@+id/btn_quit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/left_btn_d"
                android:drawableLeft="@drawable/left_info"
                android:gravity="center_vertical"
                android:paddingLeft="5.0dip"
                android:paddingRight="5.0dip"
                android:textSize="@dimen/btn_text_size"
                android:text="@string/quit"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/right_frme" />
    </LinearLayout>

</LinearLayout>